<resources>
    <string name="app_name">LoginApi</string>
    <string name="welcome">Welcome</string>
    <string name="message">Create an account and access thousand of cool stuffs</string>
    <string name="getting_started">Getting Started</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="please_login_to_continue_our_app">Please login to continue our app</string>
    <string name="log_in_now">Log In Now</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account_or_connect">Don\'t have an account? or connect</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="please_fill_the_details_and_create_account">Please fill the details and create account</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account_or_connect_with">Already have an account?</string>
    <string name="emptyName">Please enter fullName</string>
    <string name="errorEmail">Please enter email</string>
    <string name="passError">password must be at least 6 character</string>
    <string name="passEmpty">Password is empty</string>
    <string name="invalidEmail">please Enter valid Email</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="okk">ok</string>
    <string name="cancel">cancel</string>
    <string name="Dialog">Dialog</string>
    <string name="title">Login Dialog</string>
    <string name="registerDialog">Register Dialog</string>
    <string name="logout">Log Out</string>
    <string name="logOut">Logout</string>
    <string name="loginPref">loginPref</string>
    <string name="dismiss">Dismiss</string>
    <string name="dataClear">Logout</string>
    <string name="areyouwanttologout">are you want to  logout</string>
    <string name="Loading">Loading....</string>
    <string name="LoadingData">Loading.....</string>
    <string name="error">ERROR</string>
    <string name="internet_error">please check internet connectivity</string>
    <string name="status">status</string>
</resources>