<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="activityFile.LoginActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dimens80dp"
            android:layout_height="@dimen/dimens80dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens50dp"
            android:text="@string/log_in_now"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/logo"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvText"
            android:layout_width="@dimen/dimens250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens20dp"
            android:text="@string/please_login_to_continue_our_app"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tvLogin"
            app:layout_constraintStart_toStartOf="@id/tvLogin"
            app:layout_constraintTop_toBottomOf="@id/tvLogin" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TfLoginEmail"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens20dp"
            android:layout_marginTop="@dimen/dimens50sp"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TfPassword"
            style="@style/TextInputLayoutStyle"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimens20dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TfLoginEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgetPass"
            android:layout_width="@dimen/dimens250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens10dp"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@id/TfPassword"
            app:layout_constraintTop_toBottomOf="@id/TfPassword" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="@dimen/dimens70dp"
            android:layout_marginHorizontal="@dimen/dimens20dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:backgroundTint="@color/green"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/dimens20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgetPass" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBottom"
            android:layout_width="@dimen/dimens150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens70dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:text="@string/don_t_have_an_account_or_connect"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/tvSignup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSignup"
            android:layout_width="@dimen/dimens50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens20dp"
            android:layout_marginEnd="@dimen/dimens70dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"
            app:layout_constraintStart_toEndOf="@id/tvBottom"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/facebook"
            android:layout_width="@dimen/dimens50dp"
            android:layout_height="@dimen/dimens50dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:src="@drawable/facebook_new"
            android:layout_marginBottom="@dimen/dimens50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/twitter"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@id/tvBottom"
            app:layout_constraintTop_toBottomOf="@id/tvBottom" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/twitter"
            android:layout_width="@dimen/dimens50dp"
            android:layout_height="@dimen/dimens50dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:src="@drawable/twitter"
            android:layout_marginBottom="@dimen/dimens50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/googlePlus"
            app:layout_constraintStart_toEndOf="@id/facebook"
            app:layout_constraintTop_toBottomOf="@id/tvBottom" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/googlePlus"
            android:layout_width="@dimen/dimens50dp"
            android:layout_height="@dimen/dimens50dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:src="@drawable/gp"
            android:layout_marginBottom="@dimen/dimens50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvSignup"
            app:layout_constraintStart_toEndOf="@id/twitter"
            app:layout_constraintTop_toBottomOf="@id/tvBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>