<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintTop_toBottomOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="activityFile.HomeActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/dimens80dp"
            android:layout_height="@dimen/dimens80dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/dimens400"
            android:layout_height="@dimen/dimens150dp"
            android:layout_marginTop="@dimen/dimens80dp"
            android:src="@drawable/i"
            app:layout_constraintEnd_toEndOf="@id/logo"
            app:layout_constraintStart_toStartOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvWelcome"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens50dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/imageLogo"
            app:layout_constraintStart_toStartOf="@id/imageLogo"
            app:layout_constraintTop_toBottomOf="@id/imageLogo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvText"
            android:layout_width="@dimen/dimens250"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens20dp"
            android:text="@string/message"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/tvWelcome"
            app:layout_constraintStart_toStartOf="@id/tvWelcome"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStarted"
            android:layout_width="@dimen/dimen0dp"
            android:layout_height="@dimen/dimens70dp"
            android:layout_marginHorizontal="@dimen/dimens20dp"
            android:layout_marginTop="@dimen/dimens50dp"
            android:backgroundTint="@color/green"
            android:text="@string/getting_started"
            android:textAllCaps="false"
            android:textSize="@dimen/dimens20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens70dp"
            android:layout_marginTop="@dimen/dimens20dp"
            android:layout_marginBottom="@dimen/dimens50dp"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvSignup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btnStarted"
            app:layout_constraintTop_toBottomOf="@id/btnStarted" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens20dp"
            android:layout_marginEnd="@dimen/dimens70dp"
            android:layout_marginBottom="@dimen/dimens50dp"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btnStarted"
            app:layout_constraintStart_toEndOf="@id/tvBottom"
            app:layout_constraintTop_toBottomOf="@id/btnStarted" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>